assets/stylesheets/main-game.css
.main-game {
    background: linear-gradient(to right, #244428 8.8%, #467A43, #244428);
    height: fit-content;
    width: 100%;
    background-size: cover;
    background-repeat: no-repeat;
    margin: 15px 15px 0 0;
    border-radius: 8px;
    color: #BAD7C8;
}

.game-top {
    height: 440px;
    padding: 30px;
    display: flex;
    justify-content: space-between;
    font-family: Arial, Helvetica, sans-serif;
    -webkit-font-smoothing: antialiased;
}

.game-top-fanduel-logo > img {
    height: 35px;
}

.card-container {
    width: 60%;
    display: flex;
    justify-content: space-between;
}

.player-box, .banker-box {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 10px;
}

.player-box > h1, .banker-box > h1 {
    font-size: 40px;
    font-weight: bold;
}

.player-cards, .banker-cards {
    width: 100%;
    height: auto;
    max-height: 330px;
    padding: 20px;
    text-align: center;
}

.player-cards > img, .banker-cards > img {
    width: 45%;
    height: auto;
    border-radius: 12px;
}

.player-box {
    border-right: 3px solid #BAD7C8;
}

.min-bet, .max-bet {
    display: flex;
    justify-content: space-between;
}

.bet-limits span:nth-of-type(1) {
    margin-right: 15px;
}

.bet-limits > p {
    margin-bottom: 5px;
}

.bet-limits > div:not(:nth-last-of-type) {
    margin-bottom: 2px;
}

.game-top-fanduel-logo {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.game-top-fanduel-logo > p {
    color: white;
    font-family: cursive;
    font-weight: bold;
    font-size: 25px;
}

.bet-limits {
    border-radius: 5px;
    padding: 10px;
    width: 250px;
    border: 2px solid rgba(255, 201, 38, 0.5);
    background: #333;
    opacity: 0.8;
    display: flex;
    flex-direction: column;
}

.game-bottom {
    height: 520px;
    display: flex;
    justify-content: space-between;
    padding: 30px;
}

.wager-selections img {
    height: 60px;
    width: 60px;
}

.wager-selections, .bet-history-table {
    padding: 10px;
    border: 2px solid rgba(255, 201, 38, 0.5);
    border-radius: 5px;
    background: #333;
    opacity: 0.8;
}

.wager-selections-bottom {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.selections-box p {
    font-size: 40px;
    font-weight: bold;
}

.selections-box > div {
    padding: 2px 140px;
    margin-bottom: 10px;
    display: flex;
    flex-direction: column;
    align-items: center;
    border-radius: 25px;
    border: 2px solid #BAD7C8;
}

.wager-selections, .bet-limits, .bet-history-table-container {
    font-size: 18px;
    font-family: Arial, Helvetica, sans-serif;
}

.wager-selections {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 270px;
}

.wager-selections-top > div {
    margin-bottom: 5px;
}

tr {
    margin-bottom: 5px;
}

th, td {
    padding: 3px;
}

.bet-history-table-container {
    overflow: auto;
}

#clear-btn, #cash-out-btn {
    width: 100%;
    text-align: center;
    margin: 2px 0;
    padding: 5px 0;
}

#clear-btn {
    background: gray;
}

#cash-out-btn {
    background: green;
}

